@@ -1,16 +1,6 @@
+require File.expand_path("../../lib/relapse/exe_maker", __FILE__)
+
 namespace :win32_wrapper do
-  load Gem.bin_path('ocra', 'ocra', Bundler.definition.specs_for([:default]).find {|g| g.name == "ocra" }.version)
-
-  # Need to disable this method so we get the right output.
-  Ocra::OcraBuilder.class_eval do
-    def createinstdir(*args); end
-  end
-
-  options = Ocra.instance_variable_get(:@options)
-  options[:lzma_mode] = false
-  options[:chdir_first] = true
-  options[:icon_filename] = "test_project/test_app.ico"
-
   output_dir = "win32_wrapper"
   wrapper_name = "ruby_win32_wrapper"
   wrapper_dir = File.join(output_dir, wrapper_name)
@@ -18,10 +8,7 @@ namespace :win32_wrapper do
   gems_dir = "#{wrapper_dir}/gemhome/gems"
   specs_dir = "#{wrapper_dir}/gemhome/specifications"
   runner_file = "#{wrapper_dir}/relapse_runner.rb"
-
-  task :read_ocra_stubs do
-    Ocra.find_stubs
-  end
+  icon = "test_project/test_app.ico"
 
   directory output_dir
 
@@ -48,8 +35,9 @@ namespace :win32_wrapper do
     rm "#{wrapper_dir}/src/#{wrapper_name}.rb"
 
     # Copy rubyw + dlls (ruby is already included for us)
-    cp "#{Ocra::Host.bindir}/#{Ocra::Host.rubyw_exe}", bin_dir
-    Dir["#{Ocra::Host.bindir}/*.dll"].each do |file|
+    rubyw_exe = "#{RbConfig::CONFIG['bindir']}/#{RbConfig::CONFIG['rubyw_install_name'] || "rubyw"}#{RbConfig::CONFIG['EXEEXT'] || ".exe"}"
+    cp rubyw_exe, bin_dir
+    Dir["#{RbConfig::CONFIG['bindir']}/*.dll"].each do |file|
       cp file, bin_dir unless File.exists? "#{bin_dir}/#{File.basename(file)}"
     end
 
@@ -62,6 +50,13 @@ namespace :win32_wrapper do
       raise if gem_rb.empty?
       gem_dir = File.expand_path("../..", gem_rb)
       cp_r gem_dir, gems_dir
+
+      # Delete superfluous folders.
+      %w[examples samples test].each do |dir|
+        dir = File.join(gems_dir, File.basename(gem_dir), dir)
+        rm_r dir if File.exists? dir and File.directory? dir
+      end
+
       gem_spec = File.expand_path("../../specifications/#{File.basename gem_dir}.gemspec", gem_dir)
       cp_r gem_spec, specs_dir
     end
@@ -78,25 +73,9 @@ END
     end
   end
 
-  stubs = [
-      ["#{wrapper_dir}/console.exe", false, Ocra::Host.ruby_exe],
-      ["#{wrapper_dir}/windows.exe", true, Ocra::Host.rubyw_exe],
-  ]
-
-  task :executables => stubs.map {|d| d.first }
-
-  stubs.each do |executable, windowed, ruby_exe|
-    file executable => ['win32_wrapper:read_ocra_stubs', wrapper_dir] do
-      Ocra::OcraBuilder.new(executable, windowed) do |sb|
-        sb.setenv('RUBYOPT', '') #'$RUBYOPT$')
-        sb.setenv('RUBYLIB', '')
-        sb.setenv('GEM_PATH', (Ocra.Pathname(Ocra::TEMPDIR_ROOT) / Ocra::GEMHOMEDIR).to_native)
-
-        exe = Ocra.Pathname(Ocra::TEMPDIR_ROOT) / 'bin' / ruby_exe
-        script = (Ocra.Pathname(Ocra::TEMPDIR_ROOT) / 'relapse_runner.rb').to_native
-
-        sb.postcreateprocess(exe, "#{ruby_exe} \"#{script}\"")
-      end
-    end
+  task :executables do
+    ruby_file = File.basename(runner_file)
+    Relapse::ExeMaker.create("#{wrapper_dir}/console.exe", ruby_file, :icon => icon)
+    Relapse::ExeMaker.create("#{wrapper_dir}/windows.exe", ruby_file, :icon => icon, :windows => true)
   end
 end
